# anteater-events

./: README.md
backend/: Dockerfile  pyproject.toml
backend/app/: supabase_client.py  views.py
backend/config/: settings.py
my-react-app/: package-lock.json  package.json
my-react-app/src/: App.css  App.tsx
my-react-app/src/components/: FloatingActionButton.tsx  create_details.css  create_details.tsx  search_bar.tsx
my-react-app/src/utils/: createMarker.tsx  escapeHtml.ts  waitForMapClick.ts
